objects/Event_Organizer__c.object
<CustomObject>
    <fields>
        <fullName>Alt_Email__c</fullName>
        <description>The recorded alternative email of the event organizer.</description>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alt_Phone_Number__c</fullName>
        <description>The recorded alternative phone number of the event organizer.</description>
        <label>Alternative Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Recorded email of the event organizer.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location_Address_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The recorded address of the event organizer based on Location (Address book) field.</description>
        <label>Location (Address Book)</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Event Organizers</relationshipLabel>
        <relationshipName>Event_Organizer_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>The recorded phone number of the event organizer.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Event Organizer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Organizer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>